<resources>
    <string name="app_name">BuyIDUSApp</string>
    <string name="register_title">Registro</string>
    <string name="order_title">Carga de Pedidos</string>
    <string name="basket_title">Carrito de Compra</string>
    <string name="dist_select_title">Seleccion de Distribuidor</string>
    <string name="order_inquiry_title">Consulta de Pedidos</string>
    <string name="btnEnter">Ingresar</string>
    <string name="btnContinue">Continuar</string>
    <string name="btnExit">Salir</string>
    <string name="btnConfirm">Confirmar Datos</string>
    <string name="btnNewOrder">Pedido Nuevo</string>
    <string name="btnAdd">Agregar al carrito</string>
    <string name="btnWatch">Ver el Carrito</string>
    <string name="btnCancel">Cancelar</string>
    <string name="btnSendOrder">Enviar Pedido</string>
    <string name="editCode">Código</string>
    <string name="txtDetalleArticulo">Detalle del Artículo</string>
    <string name="txtSalePrice">Precio Venta:</string>
    <string name="txtPrice">Precio:</string>
    <string name="txtMultiple">u min de vta</string>
    <string name="txtTotal">Total $   </string>
    <string name="txtSign">$</string>
    <string name="txtUnits">unidad(es) agregada(s)</string>
    <string name="txtStock">Stock: </string>
    <string name="editQuantity">Cantidad</string>
    <string name="txtVoucher">Comprobante:</string>
    <string name="txtDate">Fecha: </string>
    <string name="txtObservations">Observaciones</string>
    <string name="menuWatchOrders">Consulta de Pedidos</string>
    <string name="alertWarning">Advertencia</string>
    <string name="btnAccept">Aceptar</string>
    <string name="btnYes">Si</string>
    <string name="btnNo">No</string>
    <string name="processing">Procesando&#8230; Por favor espere</string>
    <string name="distribId">Ingrese el ID enviado por la distribuidora</string>
    <string name="distribInfo">Usted está trabajando con</string>
    <string name="distribContact">Email de contacto</string>
    <string name="enterId">Ingrese ID</string>
    <string name="customerId">Id del Cliente</string>
    <string name="customerName">Nombre del Cliente</string>
    <string name="customerGivenAddress">Direccion (Brindada por la distribuidora)</string>
    <string name="customerGivenEmail">Email (Brindado por la distribuidora)</string>
    <string name="customerGivenPhone">Telefono (Brindado por la distribuidora)</string>
    <string name="customerAddress">Direccion <font color='red'>*</font></string>
    <string name="customerEmail">Email <font color='red'>*</font></string>
    <string name="customerPhone">Celular con codigo de area (sin 0 y sin 15) <font color='red'>*</font></string>
    <string name="customerPass">Ingrese Contraseña</string>
    <string name="helpPass">Contraseña <font color='red'>*</font></string>
    <string name="customerPassRep">Repita Contraseña <font color='red'>*</font></string>
    <string name="distribSelect">Elija el disribuidor con el que desea trabajar</string>
    <string name="distribName">Nombre del distribuidor</string>
    <string name="description">Busca productos por descripcion</string>
    <string name="avilableProd">Stock disponible</string>
    <string name="notAvailableProd">Stock no disponible</string>
    <string name="notAvailableData">Dato no disponible</string>
    <string name="defaultProduct">menta</string>
    <string name="msgSuccUpdateData">Datos actualizados con exito</string>
    <string name="msgSuccSaveData">Datos guardados con exito</string>
    <string name="msgSuccAddProd">Producto agreagado al carrito con exito</string>
    <string name="msgSuccSendOrder">Pedido finalizado con exito</string>
    <string name="msgConfirmOrder">¿Está seguro que desea confirmar el pedido?</string>
    <string name="msgCancelOrder">¿Está seguro que desea cancelar el pedido?</string>
    <string name="msgDeleteItem">¿Está seguro que desea eliminar el producto del carrito?</string>
    <string name="msgDeleteLastItem">¿Está seguro que desea eliminar el último producto del carrito? Esto cancelará el pedido actual</string>
    <string name="msgErrorUpdateData">No se pudo actualizar los datos, pruebe en unos minutos</string>
    <string name="msgErrorSaveData">No se pudo guardar los datos, pruebe en unos minutos</string>
    <string name="msgErrorEmptyId">Coloque un ID válido para poder ingresar</string>
    <string name="msgErrorEmptyIdPass">Coloque un ID y una contraseña válidos para poder ingresar</string>
    <string name="msgMandatoryData">Debe completar los datos obligatorios</string>
    <string name="msgErrInternet">No tiene conexión a internet. Verifique la red WIFI o los datos del equipo</string>
    <string name="msgErrClientData">No pudieron obtenerse los datos del cliente, por favor intente abrir la aplicacion nuevamente en unos minutos</string>
    <string name="msgErrCustomerData">No pudieron obtenerse los datos del cliente. Verifique el ID ingresado</string>
    <string name="msgErrDistribData">No pudieron obtenerse los datos del distribuidor, por favor intente abrir la aplicacion nuevamente en unos minutos</string>
    <string name="msgErrDataIn">Verifique los datos ingresados</string>
    <string name="msgErrPass">Ambas contraseñas deben coincidir</string>
    <string name="msgErrWrongPass">La contraseña ingresada no es la correcta</string>
    <string name="msgHelpPass">La contraseña debe estar compuesta de al menos 6 digitos, incluyendo 1 mayuscula, 1 minuscula y 1 numero</string>
    <string name="msgErrToken">No pudo obtenerse el token de seguridad, por favor intente abrir la aplicacion nuevamente en unos minutos</string>
    <string name="msgErrFind">No pudo verificarse el dispositivo, por favor intente abrir la aplicacion nuevamente en unos minutos</string>
    <string name="msgErrException">Se produjo una excepcion, por favor intente abrir la aplicacion nuevamente en unos minutos. </string>
    <string name="msgErrServer">Se produjo un error de servidor, por favor intente abrir la aplicacion nuevamente en unos minutos. </string>
    <string name="msgDisabledPhone">Dispositivo deshabilitado para ingresar, por favor comuniquese con su distribuidora</string>
    <string name="msgDisabledCustomer">Cliente deshabilitado para ingresar, por favor comuniquese con su distribuidora</string>
    <string name="msgErrAdd">No puede agregar un producto hasta completar los campos correspondientes</string>
    <string name="msgErrMinLength">Ingrese mas de 3 caracteres para poder buscar </string>
    <string name="msgErrEmptyBasket">Aun no ha agregado productos al carrito</string>
    <string name="msgErrChosenProd">Debe buscar un producto para poder agregarlo</string>
    <string name="msgErrEmptyQuantity">Ingresa la cantidad para poder agregar al carrito</string>
    <string name="msgErrMultiple">La cantidad que está ingresando no se corresponde con la unidad de venta del producto, por favor corrija el dato.</string>
    <string name="msgErrStock">Se alcanzó el stock disponible, no pueden agregarse mas unidades de este producto</string>
    <string name="msgErrOutStock">Producto sin stock, por favor elija otro</string>
    <string name="msgErrFindProd">No se obtuvieron datos para la busqueda del codigo o descripcion</string>
    <string name="msgErrFindCode">Ingrese un codigo de producto para poder buscar</string>
    <string name="msgErrBasket">No pudieron obtenerse los productos del carrito, por favor intente abrir la aplicacion nuevamente en unos minutos</string>
    <string name="msgErrOrder">No pudo confirmarse el envio del pedido, por favor intente nuevamente en unos minutos</string>
    <string name="msgErrOrderInquiry">No se pudo acceder al listado de ordenes, por favor intente nuevamente en unos minutos</string>
    <string name="msgErrEmptyInquiry">Aun no se ha realizado ningun pedido</string>
    <string name="msgError">Se produjo un error</string>
    <string name="msgErrorState">Para poder usar la aplicacion debe proporcionar el permiso para acceder al estado del telefono</string>
    <string name="msgErrorLocation">Para poder usar la aplicacion debe proporcionar el permiso para acceder a la ubicacion del telefono</string>
    <string name="msgErrorManualConfig">Deberá conceder manualmente los permisos de la aplicacion</string>
    <string name="msgErrorGPS">Para poder usar la aplicacion debe encender el GPS</string>
    <string name="bntAceptar">Aceptar</string>
    <string name="txtMensaje">Mensajes</string>
    <string name="strFecha">Fecha</string>
    <string name="strComprobante">Comprobante</string>
    <string name="strNombreCliente">Nombre Cliente</string>
    <string name="strDomicilio">Domicilio</string>
    <string name="strNombreVendedor">Nombre Vendedor</string>
    <string name="strTotal">Total</string>
    <string name="strSaldo">Saldo</string>
    <string name="strPago">Pago</string>
    <string name="strHistoricoPago">Histórico</string>
    <string name="strDetalle">Detalle</string>
    <string name="strCodigo">Código</string>
    <string name="strCantidad">Cantidad</string>
    <string name="strPrecioUnitario">Precio Unitario</string>
    <string name="strMensajeInsertado">El movimiento se registró correctamente!!!</string>
    <string name="strMensajeDeNoPermisos">No ha concedido los permisos de localización</string>
    <string name="strActualizarComprobantes">Actualizar</string>
    <string name="strDondeEstoy">Donde Estoy</string>
    <string name="strErrorGPS">Hay un error con el GPS, verifique e informe sobre el mismo</string>
    <string name="strErrorDispositivos">Error en los dispositivos de geoposicionamiento</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="strVerEnMapa">Ver en mapa</string>
    <string name="strImporteMayorACero">El importe debe ser mayor a cero (0)</string>
    <string name="strTotalMenorAImporte">El total es menor al importe que debe pagar, por favor corríjalo</string>
    <string name="strLatitud">Latitud</string>
    <string name="strLongitud">Longitud</string>
    <string name="strIr">Ir</string>
    <string name="strDireccionGoogle">Dirección Google</string>
    <string name="strDevolucionSinComp">Devolución sin comprobante</string>
    <string name="strDevolucionParcial">Devolución parcial de este comprobante</string>
    <string name="strDevolucionTotal">Devolución total de este comprobante</string>
    <string name="strFinReparto">Fin Reparto</string>
    <string name="strMensajeFinReparto">Esta intentanto ingresar al fin del reparto. Aquí se hará la rendición correspondiente al mismo</string>
    <string name="strEnviarMensaje">Enviar Mensajes</string>
    <string name="strMensajeFinDeReparto">¿Está seguro de que desea cerrar el reparto?</string>
    <string name="strNoEstanFinalizadosTodosLosComprobantes">No estan finalizados todos los comprobantes. Debe por lo menos seleccionar una acción en cada comprobante.</string>
    <string name="strAdvertencia">Advertencia!!</string>
    <string name="strTextoSeñaladorArriba">Seleccione arriba para cambiar</string>
    <string name="strFirma">Firmar</string>
    <string name="strFileFirma">imagen firma: dirección</string>
    <string name="strNoEstaFirmado">No ha firmado que el comprobante no va a quedar en Cta. Cte. No se puede proceder sin firmar.</string>
    <string name="strFirmaGuardada">Firma Guardada Correctamente!!!.</string>
    <string name="strImagenSubida">Imagen de Firma subida al servidor</string>
    <string name="strID">ID</string>
    <string name="strValor">Valor</string>
    <string name="strSubTotal">Sub Total</string>
    <string name="strTituloRendicionPlanilla">Esta Rindiendo: </string>
    <string name="strExitoMoneda">Éxito.. se regristro moneda!!</string>
    <string name="strErrorMoneda">Se produjo un error al registrar la moneda</string>
    <string name="strExitoRendicion">Se registró la rendición con éxito!!</string>
</resources>