<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editCustomerId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:ems="10"
            android:hint="@string/customerId"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editGivenAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:ems="10"
            android:hint="@string/customerGivenAddress"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editCustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/strNombreCliente"/>

        <EditText
            android:id="@+id/editGivenEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:ems="10"
            android:hint="@string/customerGivenEmail"
            android:importantForAutofill="no"
            android:inputType="textPersonName"/>


        <EditText
            android:id="@+id/editGivenPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:ems="10"
            android:hint="@string/customerGivenPhone"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:ems="10"
            android:hint="@string/customerAddress"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:ems="10"
            android:hint="@string/customerEmail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:ems="10"
            android:hint="@string/customerPhone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"/>

        <EditText
            android:id="@+id/editPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:ems="10"
            android:hint="@string/helpPass"
            android:importantForAutofill="no"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/editPassRep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:ems="10"
            android:hint="@string/customerPassRep"
            android:importantForAutofill="no"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnConfirm"
            style="@style/IdusButton"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:text="@string/btnConfirm" />


    </LinearLayout>


</ScrollView>
