<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="6"
    android:rowCount="3"
    android:useDefaultMargins="true">

    <TextView
        android:id="@+id/txtGridVoucher"
        android:layout_width="match_parent"
        android:layout_row="0"
        android:layout_column="0"
        android:lines="2"
        android:layout_columnSpan="6"
        android:text="@string/txtVoucher" />

    <TextView
        android:id="@+id/txtGridDateState"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="0.5"
        android:text="@string/txtDate" />

    <TextView
        android:id="@+id/txtGridOrderTotal"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:text="@string/txtTotal" />


</GridLayout>